--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   image_picker: ^1.1.2
   path_provider: ^2.1.3
+  get: ^4.6.6
 
 dev_dependencies:
   flutter_test:
