--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   isar: ^3.1.0+1
   isar_flutter_libs: ^3.1.0+1
-  image_picker: ^1.1.2
+  file_picker: ^8.0.5
   path_provider: ^2.1.3
   get: ^4.6.6
 
