--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
   file_picker: ^8.0.5
+  path: any
   path_provider: ^2.1.3
+  path_provider_platform_interface: ^2.0.1
   get: ^4.6.6
+  sembast: ^3.7.1+3
+  sembast_web: ^2.4.0+2
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +54,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
   build_runner: ^2.1.11
-  isar_generator: ^3.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
